linux (3.9.6-1~bpo70+1) UNRELEASED; urgency=low

  * Rebuild for squeeze

 -- Ben Hutchings <ben@decadent.org.uk>  Fri, 21 Jun 2013 23:49:44 +0100

linux (3.9.6-1) unstable; urgency=low

  * New upstream stable update:
    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.9.6
    - xhci - correct comp_mode_recovery_timer on return from hibernate
    - usb: musb: make use_sg flag URB specific
    - USB: keyspan: fix bogus array index
    - [arm] 7747/1: pcpu: ensure __my_cpu_offset cannot be re-ordered across
      barrier()
    - hpfs: fix warnings when the filesystem fills up
    - cifs: fix off-by-one bug in build_unc_path_to_root
    - ecryptfs: fixed msync to flush data
    - eCryptfs: Check return of filemap_write_and_wait during fsync
    - hwmon: (adm1021) Strengthen chip detection for ADM1021, LM84 and MAX1617
    - drm: fix a use-after-free when GPU acceleration disabled
    - [powerpc] pseries: Force 32 bit MSIs for devices that require it
    - [powerpc] pseries: Make 32-bit MSI quirk work on systems lacking firmware
      support

  [ Ben Hutchings ]
  * [armel/orion5x] Enable EXPERT; disable FIPS, OABI_COMPAT, PCI_QUIRKS,
    VGA_ARB to reduce kernel size (really fixes FTBFS)

 -- Ben Hutchings <ben@decadent.org.uk>  Sat, 15 Jun 2013 04:53:13 +0100

linux (3.9.5-1) unstable; urgency=low

  * New upstream stable update:
    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.9.5
    - [arm] 7723/1: crypto: sha1-armv4-large.S: fix SP handling
    - mac80211: use just spin_lock() in ieee80211_get_tkip_p2k()
    - USB: cxacru: potential underflow in cxacru_cm_get_array()
    - TTY: Fix tty miss restart after we turn off flow-control
      (Closes: #465823)
    - cifs: only set ops for inodes in I_NEW state
    - drivers/char/random.c: fix priming of last_data
    - random: fix accounting race condition with lockless irq entropy_count
      update
    - fat: fix possible overflow for fat_clusters
    - tg3: Fix data corruption on 5725 with TSO