@@ -1,6 +1,7 @@
 linux (3.9.6-1~bpo70+1) UNRELEASED; urgency=low
 
-  * Rebuild for squeeze
+  * Rebuild for wheezy:
+    - Disable building of udebs
 
  -- Ben Hutchings <ben@decadent.org.uk>  Fri, 21 Jun 2013 23:49:44 +0100
 
